--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,14 @@
         <artifactId>spotbugs-maven-plugin</artifactId>
         <version>3.1.12.2</version>
       </plugin>
+       <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                </configuration>
+         </plugin>
     </plugins>
   </reporting>
 </project>
